--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,9 @@ pages:
   script:
     - mkdir .public
     - cp -r * .public
+    - mv .public public
   artifacts:
     paths:
-      - .public
+      - public
   only:
-    - master
+    - main
